# enochecker_test

./: .gitignore  .mypy.ini  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: python-release.yml  pythonapp.yml
enochecker_test/: __main__.py  base.py  conftest.py  main.py  tests.py
src/enochecker_test/: conftest.py  main.py  tests.py
