[project]
name = "enochecker_test"
version = "0.10.2"
requires-python = ">=3.9"
description = "Library to help testing checker scripts based on enochecker"
authors = [
	{ name = "Louis Burda", email = "dev@sinitax.com" },
	{ name = "Lucas Drushke", email = "ldrushk@posteo.de" }
]
license = "MIT"
readme = "README.md"
dependencies = [
	"enochecker-core==0.10.*",
	"jsons~=1.6.3",
	"requests~=2.32.2",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/enowars/enochecker_test"
repository = "https://github.com/enowars/enochecker_test"

[project.scripts]
enochecker_test = "enochecker_test.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["enochecker_test"]
exclude = []

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker_core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsons"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker_test"

[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma = true
line_length = 88
force_grid_wrap = 0
use_parentheses = true

[dependency-groups]
dev = [
	"types-requests~=2.30",
]
format = [
	"ruff>=0.12.9",
]
lint = [
	"ruff>=0.12.9",
]
test = [
	"coverage>=7.10.4",
	"enochecker3>=0.10.0",
	"pytest>=8.2.2",
]
typing = [
	"mypy>=1.17.1",
]
