[project]
name = "enochecker_test"
version = "0.13.0"
requires-python = ">=3.10"
description = "Library to help test checker scripts based on enochecker"
authors = [
	{ name = "Louis Burda", email = "dev@sinitax.com" },
	{ name = "Lucas Drushke", email = "ldrushk@posteo.de" }
]
license = "MIT"
readme = "README.md"
dependencies = [
	"docker>=7.1.0",
	"jsons~=1.6.3",
	"pytest>=8.2.2",
        "pytest-asyncio>=1.3.0",
	"httpx>=0.28.1",
	"enochecker-core>=0.13.0",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

[dependency-groups]
format = [
	"ruff>=0.12.9",
]
lint = [
	"ruff>=0.12.9",
]
test = [
	"coverage>=7.10.4",
	"enochecker3>=0.13.0",
	"pytest>=8.2.2",
	"pytest-asyncio>=0.25.3"
]
typing = [
	"mypy>=1.17.1",
	"types-docker>=7.1.0.20250822",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []

[project.urls]
homepage = "https://github.com/enowars/enochecker_test"
repository = "https://github.com/enowars/enochecker_test"

[project.scripts]
enochecker_test = "enochecker_test.main:main"

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker_core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsons"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "enochecker_test"

[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma = true
line_length = 88
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
enochecker3 = { path = "/home/lucas/Documents/prog/enochecker3", editable = true }
